...
class UserRepoImpl : UserRepo{
    val auth : FirebaseAuth = FirebaseAuth.getInstance() // Authentication
    val database: FirebaseDatabase = FirebaseDatabase.getInstance() //Database
    val ref : DatabaseReference = database.getReference("Users") //Table

    override fun login(
        email: String,
        password: String,
        callback: (Boolean, String) -> Unit
    ) {
        auth.signInWithEmailAndPassword(email,password).addOnCompleteListener {
            if(it.isSuccessful){
                callback(true, "Login Successful")
            }else{
...
