...
                    containerColor = Color.Blue,
                    actionIconContentColor = White,
                    titleContentColor = Color.White,
                    navigationIconContentColor = Color.Black
                ),
                title= {
                    Text("Dashboard") },
                navigationIcon = {
                    IconButton (onClick = {
                        activity?.finish()
                    }) {
                        Icon(
                            painter = painterResource(R.drawable.baseline_arrow_back_ios_new_24),
...
